item-manager: Clear mode specific items from all child base managers

The recent change in implemention of photos_item_manager_clear
did not clear mode specific items from all child base managers.
Apparently, exactly one child base manager was left to be cleared
according to that implemenation, due to which g_assert_true (item == item1)
fails in item_manager_hide_item when the item is deleted under "Favorite"
tab.

This commit partially reverts 8d1d00232a9e62deb93ae4d4f498d0b51b3dad2e

https://bugzilla.gnome.org/show_bug.cgi?id=770823