src/photos-item-manager.c
@@ -852,24 +852,20 @@ photos_item_manager_clear (PhotosItemManager *self, PhotosWindowMode mode)
       PhotosBaseItem *item = NULL;
       guint i;
 
-      for (i = 1; self->item_mngr_chldrn[i] != NULL; i++)
+      for (i = 0; self->item_mngr_chldrn[i] != NULL; i++)
         {
           if (item_mngr_chld == self->item_mngr_chldrn[i])
             continue;
 
           item = PHOTOS_BASE_ITEM (photos_base_manager_get_object_by_id (self->item_mngr_chldrn[i], id));
           if (item != NULL)
-            break;
-        }
+            {
+              const gchar *id1;
+              id1 = photos_filterable_get_id (PHOTOS_FILTERABLE (item));
+              g_assert_cmpstr (id, ==, id1);
 
-      if (item != NULL)
-        {
-          const gchar *id1;
-
-          id1 = photos_filterable_get_id (PHOTOS_FILTERABLE (item));
-          g_assert_cmpstr (id, ==, id1);
-
-          photos_base_manager_remove_object_by_id (self->item_mngr_chldrn[0], id);
+              photos_base_manager_remove_object_by_id (self->item_mngr_chldrn[i], id);
+            }
         }
     }
 
